2007-10-28  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/package.README: Remove 'Other version' tag
	from the end.

2007-10-27  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/Makefile.tmp (install): Replace
	$(PACKAGE) target with 'all'.
	(EXE): Fix rule to use $OBJS, not $SRCS

2007-10-26  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildInstallExtraManualCompress):
	Remove find(1) calls from if-statements. This fixes bug,
	where function got stalled, because there was no files
	to compress.
	(CygbuildCmdInstallCheckCygpatchDirectory): Ignore
	*.tmp and *[#~] files from whitespace check.
	(CygbuildMakefileRunInstall): If there is no Makefile,
	Call CygbuildNoticeBuilddirMaybe() first.
	(CygbuildCmdInstallCheckDirStructure): Added /use/share/
	content check.

2007-10-18  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/*: Change all 'Your Name' phrases to
	'Firstname Lastname'.

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckReadme): Search
	phrase 'Firstname Lastname'.
	(CygbuildConfCC): Change variable $conf from srcdir to
	builddir.
	(CygbuildCmdConfMain): Handle autoreconf case better.
	(CygbuildBootVariablesGlobalMain): Add .git and
	.darcs to CYGBUILD_SHADOW_TOPLEVEL_IGNORE.

2007-10-01  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckShellFiles):
	shorten message by using relative path. Display symlink destination.
	Correct for-loop to check only files.
	(CygbuildCmdInstallCheckSetupHint): Correct variable name 'retval'.
	Added 'category:' line check.
	(CygbuildDefineGlobalCommands): Rewrote perl and python handling.
	Define variables PERL_VERSION, PYTHON_VERSION, PYTHON_LIBDIR.
	(CygbuildSetLDPATHpython): Use PYTHON_LIBDIR.
	(CygbuildPatchApplyMaybe): if there is no *.patch, ignore ls(1)
	message.
	(CygbuildBootVariablesGlobalMain):
	cygbuild_opt_exclude_object_files: exclude *egg-info
	(CygbuildPatchCheck): Adjusted regexp to check *.c files.
	Display file name in message 'patch contains files'.