@@ -1,3 +1,10 @@
+2007-10-29  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh: (CygbuildVersionInfo): Add support for
+	'foo_V1.1" tokens.
+	* bin/cygbuild.pl (Version): Add support for
+	'foo_V1.1" tokens.
+
 2007-10-28  Jari Aalto  <jari.aalto@cante.net>
 
 	* etc/template/package.README: Remove 'Other version' tag
